# estudio

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
docker/development/: Dockerfile
docker/production/: Dockerfile
estudio/: manage.py  run.sh
estudio/estudio/: asgi.py  local_settings.example.py  settings.py  urls.py  wsgi.py
estudio/users/: admin.py  models.py  serializers.py  views.py
estudio/users/management/commands/: addsuperuser.py
estudio/users/migrations/: 0001_initial.py
scripts/: seeddata.sh
