[tool.poetry]
name = "estudio"
version = "0.1.0"
description = "A REST application for managing internal information of a academic course"
authors = ["Nicolas <naquiroz@uc.cl>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/naquiroz/estudio"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.1.7"

# We use a tilde (~) instead of a caret (^) for dependencies
# that do not follow a strict semver-driven releasing system.
# For further information about this matter, please refer to
# <https://python-poetry.org/docs/versions/>

django-cors-headers = "~3.7"
django-filter = "^2.4.0"
django-guardian = "^2.3.0"
djangorestframework = "^3.12.4"
dj-database-url = "^0.5.0"
docutils = "^0.16"
factory-boy = "^3.2.0"
gunicorn = "~20.0"
Markdown = "^3.3.4"
psycopg2-binary = "^2.8.6"
Pygments = "^2.8.1"
PyYAML = "^5.4.1"
uritemplate = "^3.0.1"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
pylint = "^2.7.4"
pylint-django = "~2.4"

[tool.black]
line-length = 99
target-version = ["py37", "py38"]
exclude = '/(\.venv|migrations)/'

[tool.isort]
profile = "black"
line_length = 99
skip_glob = "**/migrations/**"


[tool.pylint.MASTER]
disable = "C0111,C0103,C0411,W0511,W0707"
load-plugins = "pylint_django"
init-hook = 'import sys; sys.path.append("./estudio")'
ignore = "static,local_settings.py"
ignore-patterns = '.*\.json,.*\.sh'

# I tried to ignore anything that is not a Python file.
# But my negative lookbehind didn't work: ^.+(?<!\.py)$

[tool.pylint.DESIGN]

# Too many instance attributes (default: 7)
max-attributes = 10

# Too many local variables (default: 15)
max-locals = 20

# Too many ancestors (default: 7)
max-parents = 15

# Too many public methods (default: 20)
max-public-methods = 25

[tool.pylint.SIMILARITIES]

# Ignore imports when computing similarities.
ignore-imports = "yes"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
